fixed contact form email format and shifted video buttons

--- a/main/assets/css/video.css
+++ b/main/assets/css/video.css
@@ -47,7 +47,7 @@ video {
     position: fixed;
 }
 
- #checklist {
+ #video-text {
     position: absolute;
       top: 50%;
       left: 50%;
@@ -67,6 +67,11 @@ video {
 #video-container {
     position: relative;
     top: 180px;
+}
+
+#video-controls {
+    position: relative;
+    bottom: 0;
 }
 
 video, canvas {
